anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/TEKCO_AnonymizationPattern__mdt.object-meta.xml
<CustomObject>
    <label>TEKCO Anonymization Pattern</label>
    <pluralLabel>TEKCO Anonymization Patterns</pluralLabel>
</CustomObject>