anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_BaseEmail__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_BaseEmail__c</fullName>
    <label>Base Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>