anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_Description__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>