anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_ExternalIdField__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_ExternalIdField__c</fullName>
    <label>External ID Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>