anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_RegexFind__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_RegexFind__c</fullName>
    <label>Regex Find</label>
    <length>255</length>
    <type>Text</type>
</CustomField>