anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_RegexReplace__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_RegexReplace__c</fullName>
    <label>Regex Replace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>