anonymization/main/default/objects/TEKCO_AnonymizationPattern__mdt/fields/TEKCO_SsnLength__c.field-meta.xml
<CustomField>
    <fullName>TEKCO_SsnLength__c</fullName>
    <label>SSN Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>